--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jenn Bowers",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mustache-express": "^1.2.4"
   }
 }
